--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
     - assets/images/discover.png
     - assets/images/account.png
     - assets/images/adarak.png
-    - assets/images/ajwain.png
+    - assets/images/ajwain1.png
     - assets/images/amla.png
     - assets/images/anar.png
     - assets/images/blood.png
